samples/_failures_safe/1761536604_af36e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19d36c88.c: In function ‘main’:
./samples/SAFE/__tmp_19d36c88.c:139:9: error: expected declaration or statement at end of input
  139 |         destroy_matrix(&mat1);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_19d36c88.c:139:9: error: expected declaration or statement at end of input
